chore: upgrade DiscordIPC and DevAuth